--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHICAS MEJORES</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+        integrity="sha512-1cK78a1o+ht2JcaW6g8OXYwqpev9+6GqOkz9xmBN9iUUhIndKtxwILGWYOSibOKjLsEdjyjZvYDq/cZwNeak0w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <div class="page">
-        <header class="header">
+        <header data-aos-duration="1000" data-aos="fade-down" data-aos-once="true" class="header">
             <div class="wrapper header__wrapper">
                 <a href="#" class="header__logo-link">
                     <svg width="220" height="30" viewBox="0 0 220 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -65,7 +68,7 @@
             </div>
         </header>
         <main class="main">
-            <section class="promo-section">
+            <section data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="promo-section">
                 <div class="wrapper promo-section__wrapper">
                     <div class="promo-section__content">
                         <h1 class="heading promo-section__heading">
@@ -96,7 +99,7 @@
                     </div>
                 </div>
             </section>
-            <section class="adv-section">
+            <section data-aos-duration="1000" data-aos="fade-left" data-aos-once="true" class="adv-section">
                 <div class="wrapper adv-section__wrapper">
                     <div class="adv-section__content">
                         <h2 class="subheading adv-section__heading">
@@ -112,7 +115,7 @@
                     </div>
                 </div>
             </section>
-            <section class="cards-section">
+            <section data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="cards-section">
                 <div class="wrapper cards-section__wrapper">
                     <p class="cards-section__subtext">
                         and...
@@ -146,7 +149,7 @@
                     </div>
                 </div>
             </section>
-            <section class="solve-section">
+            <section data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="solve-section">
                 <div class="wrapper solve-section__wrapper">
                     <div class="solve-section__content">
                         <h2 class="subheading solve-section__heading">
@@ -158,7 +161,7 @@
                     </div>
                 </div>
             </section>
-            <section class="try-section">
+            <section data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="try-section">
                 <div class="wrapper try-section__wrapper">
                     <h2 class="subheading subheading_white try-section__heading">
                         Try сhicasmejores.com
@@ -171,7 +174,7 @@
                     </button>
                 </div>
             </section>
-            <section class="goal-section">
+            <section data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="goal-section">
                 <div class="wrapper goal-section__wrapper">
                     <div class="goal-section__content">
                         <h2 class="subheading goal-section__heading">
@@ -183,7 +186,7 @@
                     </div>
                 </div>
             </section>
-            <section class="platform-section">
+            <section data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="platform-section">
                 <div class="wrapper platform-section__wrapper">
                     <div class="platform-section__content">
                         <h2 class="subheading platform-section__heading">
@@ -199,7 +202,7 @@
                     </div>
                 </div>
             </section>
-            <section class="reviews-section">
+            <section data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="reviews-section">
                 <div class="wrapper reviews-section__wrapper">
                     <h2 class="subheading reviews-section__heading">
                         See what our models tell about <span>chicasmejores.com</span>
@@ -290,7 +293,7 @@
                     </div>
                 </div>
             </section>
-            <section class="features-section">
+            <section data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="features-section">
                 <div class="wrapper features-section__wrapper">
                     <div class="features-section__content">
                         <h2 class="subheading features-section__heading">
@@ -328,7 +331,7 @@
                     </div>
                 </div>
             </section>
-            <section class="agency-section">
+            <section data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="agency-section">
                 <div class="wrapper agency-section__wrapper">
                     <div class="agency-section__content">
                         <h2 class="subheading agency-section__heading">
@@ -366,7 +369,7 @@
                     </div>
                 </div>
             </section>
-            <section class="start-section">
+            <section data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="start-section">
                 <div class="wrapper start-section__wrapper">
                     <h2 class="subheading start-section__heading">
                         To start, publish your first profile just <span>in 10 minutes</span>
@@ -404,7 +407,7 @@
                     </button>
                 </div>
             </section>
-            <section class="matter-section">
+            <section data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="matter-section">
                 <div class="wrapper matter-section__wrapper">
                     <div class="matter-section__content">
                         <h2 class="subheading matter-section__heading">
@@ -416,7 +419,7 @@
                     </div>
                 </div>
             </section>
-            <section class="only-section">
+            <section data-aos="fade-right" data-aos-duration="1000" data-aos-once="true" class="only-section">
                 <div class="wrapper only-section__wrapper">
                     <h2 class="subheading only-section__heading">
                         Only <span class="subheading__disc">18 USD</span> per month for each profile
@@ -429,7 +432,7 @@
                     </button>
                 </div>
             </section>
-            <section class="questions-section">
+            <section data-aos="fade-left" data-aos-duration="1000" data-aos-once="true" class="questions-section">
                 <div class="wrapper questions-section__wrapper">
                     <h2 class="subheading questions-section__heading">
                         Frequently asked questions
@@ -522,9 +525,15 @@
             </section>
         </main>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"
+        integrity="sha512-A7AYk1fGKX6S2SsHywmPkrnzTZHrgiVT7GcQkLGDe2ev0aWb8zejytzS8wjo7PGEXKqJOrjQ4oORtnimIRZBtw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./scripts/slider.js"></script>
     <script src="./scripts/accordion.js"></script>
+    <script>
+        AOS.init()
+    </script>
 </body>
 
 </html>
