--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                         </div>
                     </div>
                 </div>
+                <button type="button" class="header__mobile-btn togglePopup">
+                    Start earning
+                </button>
             </div>
         </header>
         <main class="main">
@@ -342,6 +345,7 @@
                                     fill="#5F5F69" />
                             </svg>
                         </button>
+                        <div class="swiper-pagination"></div>
                     </div>
                 </div>
             </section>
