f: header, spaces in links

--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
                         Try first month for free
                     </button>
                     <p class="form__subtext">
-                        By continuing, I confirm I have read the <a href="#">
-                            Privacy Policy
-                        </a> and agree to the <a href="#">
-                            Terms and Conditions
-                        </a>
+                        By continuing, I confirm I have read the <a href="#">Privacy Policy</a> and agree to the <a
+                            href="#">Terms and Conditions</a>
                     </p>
                 </form>
             </div>
@@ -129,11 +126,8 @@
                                 Try first month for free
                             </button>
                             <p class="promo-section__subtext">
-                                By continuing, I confirm I have read the <a href="#">
-                                    Privacy Policy
-                                </a> and agree to the <a href="#">
-                                    Terms and Conditions
-                                </a>
+                                By continuing, I confirm I have read the <a href="#">Privacy Policy</a> and agree to the
+                                <a href="#">Terms and Conditions</a>
                             </p>
                         </form>
                     </div>
@@ -162,7 +156,7 @@
                     </p>
                     <h2 class="subheading cards-section__heading">
                         There are a lot of <span>other challenges</span> that models may face when starting their own
-                        carier
+                        career
                     </h2>
                     <div class="cards-section__list">
                         <div class="card cards-section__card">
@@ -311,11 +305,11 @@
                                     </h3>
                                     <div class="reviews-card__body">
                                         <p>
-                                            “I can't thank Chicas Mejores enough for their incredible service! My
+                                            I can't thank Chicas Mejores enough for their incredible service! My
                                             subscription with them has not only brought more
                                             connections to my business but has also boosted my revenue significantly.
                                             The investment in their service has been worth
-                                            every dollar. Highly recommend it!"
+                                            every dollar. Highly recommend it!
                                         </p>
                                     </div>
                                 </div>
@@ -470,7 +464,7 @@
                             <span>No matter</span> agency you are or individual
                         </h2>
                         <p class="text matter-section__text">
-                            You can create and manage <span>up to 50 models</span> profiles 🔥
+                            You can create and manage <span>up to 50 model</span> profiles 🔥
                         </p>
                     </div>
                 </div>
